{
  "version": 4,
  "terraform_version": "1.8.5",
  "serial": 120,
  "lineage": "d0914797-aa0c-9b40-e55e-8eb6ff875506",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "eks-nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-02cbc61fa036a2985",
            "arn": "arn:aws:ec2:us-east-1:211125581494:elastic-ip/eipalloc-02cbc61fa036a2985",
            "association_id": "eipassoc-0ae8dfd93e7390a06",
            "domain": "vpc",
            "id": "eipalloc-02cbc61fa036a2985",
            "network_border_group": "us-east-1",
            "network_interface": "eni-059e3e2dd81b8e46e",
            "private_dns": "ip-10-0-2-135.ec2.internal",
            "private_ip": "10.0.2.135",
            "public_dns": "ec2-3-209-252-130.compute-1.amazonaws.com",
            "public_ip": "3.209.252.130",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:211125581494:internet-gateway/igw-0f7e42059d46adbf5",
            "id": "igw-0f7e42059d46adbf5",
            "owner_id": "211125581494",
            "tags": {
              "Name": "main"
            },
            "tags_all": {
              "Name": "main"
            },
            "vpc_id": "vpc-04f1b065e01888a82"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "eks-nat-gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-02cbc61fa036a2985",
            "association_id": "eipassoc-0ae8dfd93e7390a06",
            "connectivity_type": "public",
            "id": "nat-06874bb0dc93a1db7",
            "network_interface_id": "eni-059e3e2dd81b8e46e",
            "private_ip": "10.0.2.135",
            "public_ip": "3.209.252.130",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0e9ecce1315e19b4f",
            "tags": {
              "Name": "EKS NAT GW"
            },
            "tags_all": {
              "Name": "EKS NAT GW"
            }
          },
          "dependencies": [
            "aws_eip.eks-nat",
            "aws_internet_gateway.gw",
            "aws_subnet.public-us-east-1a",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "eks-route-private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:211125581494:route-table/rtb-07586187f53fbb7d6",
            "id": "rtb-07586187f53fbb7d6",
            "owner_id": "211125581494",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-06874bb0dc93a1db7",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Private-eks"
            },
            "tags_all": {
              "Name": "Private-eks"
            },
            "timeouts": null,
            "vpc_id": "vpc-04f1b065e01888a82"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.eks-nat",
            "aws_internet_gateway.gw",
            "aws_nat_gateway.eks-nat-gw",
            "aws_subnet.public-us-east-1a",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "eks-route-public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:211125581494:route-table/rtb-0e8116ecb227119df",
            "id": "rtb-0e8116ecb227119df",
            "owner_id": "211125581494",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0f7e42059d46adbf5",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Public-eks"
            },
            "tags_all": {
              "Name": "Public-eks"
            },
            "timeouts": null,
            "vpc_id": "vpc-04f1b065e01888a82"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rt-private-us-east-1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05cc3d1dac582736d",
            "route_table_id": "rtb-07586187f53fbb7d6",
            "subnet_id": "subnet-0d4b36b731a64d493"
          },
          "dependencies": [
            "aws_eip.eks-nat",
            "aws_internet_gateway.gw",
            "aws_nat_gateway.eks-nat-gw",
            "aws_route_table.eks-route-private",
            "aws_subnet.private-us-east-1a",
            "aws_subnet.public-us-east-1a",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rt-private-us-east-1b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0443c8ed477fc4101",
            "route_table_id": "rtb-07586187f53fbb7d6",
            "subnet_id": "subnet-014e3d6771b63aaad"
          },
          "dependencies": [
            "aws_eip.eks-nat",
            "aws_internet_gateway.gw",
            "aws_nat_gateway.eks-nat-gw",
            "aws_route_table.eks-route-private",
            "aws_subnet.private-us-east-1b",
            "aws_subnet.public-us-east-1a",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rt-public-us-east-1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a99e74d405977f9b",
            "route_table_id": "rtb-0e8116ecb227119df",
            "subnet_id": "subnet-0e9ecce1315e19b4f"
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_route_table.eks-route-public",
            "aws_subnet.public-us-east-1a",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rt-public-us-east-1b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0caa0a2d2ea55ff82",
            "route_table_id": "rtb-0e8116ecb227119df",
            "subnet_id": "subnet-079294068f34ad2fb"
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_route_table.eks-route-public",
            "aws_subnet.public-us-east-1b",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private-us-east-1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:211125581494:subnet/subnet-0d4b36b731a64d493",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d4b36b731a64d493",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "211125581494",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private-us-east-1a",
              "kubernetes.io/cluster/vijay-eks-cluster": "owned",
              "kubernetes.io/role/internal-elb": "a"
            },
            "tags_all": {
              "Name": "private-us-east-1a",
              "kubernetes.io/cluster/vijay-eks-cluster": "owned",
              "kubernetes.io/role/internal-elb": "a"
            },
            "vpc_id": "vpc-04f1b065e01888a82"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private-us-east-1b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:211125581494:subnet/subnet-014e3d6771b63aaad",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-014e3d6771b63aaad",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "211125581494",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private-us-east-1b",
              "kubernetes.io/cluster/vijay-eks-cluster": "owned",
              "kubernetes.io/role/internal-elb": "a"
            },
            "tags_all": {
              "Name": "private-us-east-1b",
              "kubernetes.io/cluster/vijay-eks-cluster": "owned",
              "kubernetes.io/role/internal-elb": "a"
            },
            "vpc_id": "vpc-04f1b065e01888a82"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public-us-east-1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:211125581494:subnet/subnet-0e9ecce1315e19b4f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e9ecce1315e19b4f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "211125581494",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public-us-east-1a",
              "kubernetes.io/cluster/vijay-eks-cluster": "owned",
              "kubernetes.io/role/internal-elb": "a"
            },
            "tags_all": {
              "Name": "public-us-east-1a",
              "kubernetes.io/cluster/vijay-eks-cluster": "owned",
              "kubernetes.io/role/internal-elb": "a"
            },
            "vpc_id": "vpc-04f1b065e01888a82"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public-us-east-1b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:211125581494:subnet/subnet-079294068f34ad2fb",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-079294068f34ad2fb",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "211125581494",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public-us-east-1b",
              "kubernetes.io/cluster/vijay-eks-cluster": "owned",
              "kubernetes.io/role/internal-elb": "a"
            },
            "tags_all": {
              "Name": "public-us-east-1b",
              "kubernetes.io/cluster/vijay-eks-cluster": "owned",
              "kubernetes.io/role/internal-elb": "a"
            },
            "vpc_id": "vpc-04f1b065e01888a82"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:211125581494:vpc/vpc-04f1b065e01888a82",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0ad1e32b5948b64ef",
            "default_route_table_id": "rtb-07ef70b86d21ca522",
            "default_security_group_id": "sg-082d733c876c3f925",
            "dhcp_options_id": "dopt-0007c6912dac1ccf9",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-04f1b065e01888a82",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-07ef70b86d21ca522",
            "owner_id": "211125581494",
            "tags": {
              "Name": "eks-vpc"
            },
            "tags_all": {
              "Name": "eks-vpc"
            }
          }
        }
      ]
    }
  ]
}